default/objects/Sales_Agent__c/Sales_Agent__c.object-meta.xml
<CustomObject>
    <description>Sales Agent Object For Technical Assessment Given By Ajit Sir.</description>
    <label>Sales Agent</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Sales Agent</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>