default/objects/Sales_Agent__c/fields/Default_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Commission_Rate__c</fullName>
    <label>Default Commission Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>