default/objects/Sales_Agent__c/fields/Pending_Commission_Balanced__c.field-meta.xml
<CustomField>
    <fullName>Pending_Commission_Balanced__c</fullName>
    <label>Pending Commission Balanced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>