default/objects/Sales_Agent__c/fields/Sales_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agent_Name__c</fullName>
    <label>Sales Agent Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>