default/objects/Sales_Agent__c/fields/Settled_Commission_Balanced__c.field-meta.xml
<CustomField>
    <fullName>Settled_Commission_Balanced__c</fullName>
    <label>Settled Commission Balanced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>