default/objects/Sales_Agent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pending_Commission_Balanced__c</columns>
    <columns>Settled_Commission_Balanced__c</columns>
    <columns>Default_Commission_Rate__c</columns>
    <columns>Sales_Agent_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>